--- a/_pages/about.html
+++ b/_pages/about.html
@@ -46,7 +46,7 @@ description: Missy is a nationally certified and state licensed Occupational The
 <!--            <p class="position"><small>Founder / Owner</small></p>-->
             <ul class="team-social">
               {% if site.author.linkedin %}
-              <li><a target="_blank" href="{{site.author.linkedin}}"><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="{{site.author.linkedin}}"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               {% endif %}
           <!--
               {% if site.author.facebook %}
